# greptimeai-cookbook

./: .gitignore  LICENSE  README.md
.github/workflows/: build-example-image.yml  build-image.yml  release.yml
examples/langchain/: Dockerfile  README.md  pyproject.toml
examples/langchain/src/langchain/: app.py  langchains.py
examples/langchain/src/langchain_example/: app.py  langchain_.py  langchains.py
examples/langchain/src/langchain_example/retrieval/: __init__.py
examples/langchain/src/openai/: app.py
examples/openai/: Dockerfile  README.md  pyproject.toml
examples/openai/src/openai_example/: __init__.py  app.py
