[project]
name = "langchain-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yuanbohan", email = "yuanbo.han@gmail.com" }
]
dependencies = [
    "langchain>=0.0.352",
    "openai==1.2.0",
    "Flask>=3.0.0",
    "greptimeai>=0.1.16",
]
readme = "README.md"
requires-python = ">= 3.8.1"

[tool.rye]
managed = true
dev-dependencies = [
    "socksio>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
app = { cmd = "python src/langchain_example/app.py" }
