[project]
name = "openai-example"
version = "0.1.0"
description = "example to instrument openai via greptimeai"
authors = [
    { name = "Yuanbo Han", email = "yuanbo.han@gmail.com" }
]
dependencies = [
    "openai>=1.3.5",
    "flask[async]>=3.0.0",
    "greptimeai>=0.1.17",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[tool.rye]
managed = true
dev-dependencies = [
    "httpx[socks]>=0.25.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
app = { cmd = "python src/openai_example/app.py" }
